# askit

./: Cargo.toml  README.md  RELEASE_GUIDE.md
examples/: basic.rs  default_typed.rs  input_showcases.rs  validate.rs
src/: lib.rs  macros.rs  prompt.rs
src/prompt_mod/: error.rs  mod.rs  parse.rs  prompt.rs  typed_prompt.rs  validator.rs
tests/: default_tests.rs  prompt_tests.rs  validate_tests.rs
